--- a/src/Components/Filters/style.module.css
+++ b/src/Components/Filters/style.module.css
@@ -45,7 +45,7 @@
   cursor: not-allowed;
 }
 
-.filters__searchForm {
+.filters__searchForm form {
   display: flex;
   flex-flow: row wrap;
   justify-content: flex-start;
@@ -90,4 +90,54 @@
   min-width: 100px;
   border: 1px solid var(--secondary-bg-color);
   cursor: pointer;
+}
+
+@media (min-width: 768px) and (max-width: 1200px) {
+  .filters {
+    min-width: 75vw;
+  }
+}
+
+@media (max-width: 767px) {
+  .filters {
+    font-size: smaller;
+    flex-direction: column-reverse;
+  }
+  .filters__navigationButtons button,
+  .filters__searchForm .filters__searchForm__submit,
+  .filters__limitDropDown__select,
+  .filters__sortByDropDown__select {
+    font-size: smaller;
+  }
+  .filters__navigationButtons,
+  .filters__searchForm,
+  .filters__limitDropDown,
+  .filters__sortByDropDown {
+    width: 100%;
+    padding: 0;
+    text-align: left;
+    justify-content: space-around;
+  }
+  .filters__searchForm .filters__searchForm__input {
+    padding: 0.5rem 0.8rem;
+    font-size: 0.8rem;
+  }
+  .filters__navigationButtons {
+    flex-flow: row nowrap;
+  }
+  .filters__navigationButtons button {
+    width: 45%;
+  }
+  .filters__searchForm form {
+    width: 100%;
+    padding: 0.2rem 0;
+    justify-content: space-around;
+  }
+  .filters__searchForm form input {
+    width: 100%;
+  }
+  .filters__searchForm form .filters__searchForm__input {
+    margin: 0.8rem;
+    padding: 0.8rem;
+  }
 }
