--- a/src/Components/Cards/style.module.css
+++ b/src/Components/Cards/style.module.css
@@ -62,10 +62,13 @@
 }
 
 .card .overlay .height {
-  margin: 0;
+  margin: auto 0;
 }
 
 .card .overlay .cta {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-family: inherit;
   font-size: 1.2rem;
   margin-top: auto;
@@ -73,12 +76,14 @@
   border-radius: 32px;
   height: 55px;
   cursor: pointer;
+  color: var(--secondary-bg-color);
   background: var(--font-color);
   border-color: var(--font-color);
+  text-decoration: none;
 }
 
 .card .overlay .cta:hover {
   color: var(--font-color);
   background: transparent;
-  border-color: var(--font-color);
+  border: 1px solid var(--font-color);
 }
