--- a/src/Components/NoMatch/style.module.css
+++ b/src/Components/NoMatch/style.module.css
@@ -8,3 +8,22 @@
   border-radius: 32px;
   background-color: var(--secondary-bg-color);
 }
+
+.noMatchButton {
+  font-family: var(--font-family);
+  background-color: var(--link-color);
+  border: none;
+  color: var(--font-color);
+  font-weight: bold;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 32px;
+  cursor: pointer;
+}
+
+.noMatchButton:hover {
+  opacity: 0.8;
+}
