--- a/src/Components/Loader/style.module.css
+++ b/src/Components/Loader/style.module.css
@@ -1,6 +1,6 @@
 .loader {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   position: absolute;
   z-index: 1000;
   top: 0;
@@ -23,9 +23,9 @@
 /* SPINNER ANIMATION */
 .loader__inner {
   position: relative;
-  top: 35%;
-  width: 80px;
-  height: 80px;
+  top: 3%;
+  width: 300px;
+  height: 300px;
   margin: 0 auto;
   background-color: #fff;
   background-image: url("https://media.giphy.com/media/RgzryV9nRCMHPVVXPV/giphy.gif");
